Actions
Bug #1779
closedpanic: assertion failed: rc == DDI_SUCCESS, file: ../../common/os/devcfg.c, line: 4185
Start date:
2011-11-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
During a reboot (full, to BIOS, not "fast" reboot) on a debug kernel, on a system with nVidia graphics, I got a panic just before the restart:
syncing file systems... done rebooting... panic[cpu0]/thread=ffffff02fa136bc0: assertion failed: rc == DDI_SUCCESS, file: ../../common/os/devcfg.c, line: 4185
Here's the stack back-trace
# mdb -k 1 Loading modules: [ unix genunix ... ] > ::status debugging crash dump vmcore.1 (64-bit) from dell6300gwr operating system: 5.11 acpi (i86pc) image uuid: efbad1d5-9063-6e5a-933d-839ff5f86b4d panic message: assertion failed: rc == DDI_SUCCESS, file: ../../common/os/devcfg.c, line: 4185 dump content: kernel pages only > $C ffffff000fd96c40 vpanic() ffffff000fd96c80 assfail+0x7e(fffffffffbf909f8, fffffffffbf91c58, 1059) ffffff000fd96cc0 quiesce_one_device+0x9c(ffffff02e6722618, ffffff000fd96d9c) ffffff000fd96cf0 quiesce_devices+0x55(ffffff02e6722618, ffffff000fd96d9c) ffffff000fd96d20 quiesce_devices+0x4a(ffffff02e6726348, ffffff000fd96d9c) >
Related issues
Updated by Gordon Ross over 10 years ago
The failure is an assert after the nVidia driver's quiesce entry point returns DDI_FAILURE. This particular assert is more annoying than helpful.
In IRC, gdamore wrote: I'd prefer to see the ASSERT turned into a cmn_err() with details about the driver that fails, and then continue on.
Updated by Gordon Ross over 10 years ago
- Difficulty changed from Medium to Bite-size
Updated by Rich Lowe over 10 years ago
- Category set to kernel
- Status changed from New to Resolved
- Assignee set to Alexander Eremin
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13577 commit:39608e1faa5f
Actions