1779 panic: assertion failed: rc == DDI_SUCCESS, file: ../../common/os/devcfg.c, line: 4185 Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Dan Kruchinin <dkruchinin@acm.org> Reviewed by: Milan Jurik <milan.jurik@xylab.cz> Reviewed by: Michael Speer <michael.speer@pluribusnetworks.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Alexander Stetsenko <ams@nexenta.com> Reviewed by: Bayard Bell <buffer.g.overflow@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Richard Lowe <richlowe@richlowe.net>